[workspace]
members = ["logcontrol", "tracing", "log", "log-reload", "zbus"]
resolver = "2"

[workspace.package]
homepage = "https://github.com/swsnr/logcontrol.rs"
repository = "https://github.com/swsnr/logcontrol.rs.git"
edition = "2021"
rust-version = "1.71"
license = "MIT OR Apache-2.0"
categories = ["development-tools::debugging"]

# Defaults for cargo release for this entire workspace
[workspace.metadata.release]
allow-branch = ["main"]
sign-tag = true
sign-commit = true
# Make a single bump commit for each crate
consolidate-commits = false
pre-release-commit-message = "Release {{crate_name}} {{version}}"
tag-message = "{{crate_name}} {{version}}"
tag-prefix = "{{crate_name}}-"
# That's what we have github actions for
verify = false
# We have a release workflow for this
publish = false
