[package]
name = "logcontrol-log"
version = "0.1.0"
description = "log backend for the log control interface"
documentation = "https://docs.rs/logcontrol-log"
readme = "README.md"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
keywords = ["systemd", "log", "tracing"]

homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
logcontrol = { version = "1.0.1", path = "../logcontrol" }
log-reload = { version = "0.1.0", path = "../log-reload" }
log = "0.4.20"
systemd-journal-logger = "2.0.0"

[dev-dependencies]
static_assertions = "1.1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
logcontrol-zbus = { path = "../zbus" }
zbus = "5.0.1"
env_logger = "0.11.1"

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/swsnr/logcontrol.rs/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
