[package]
name = "logcontrol"
version = "1.0.0"
description = "Abstract types for the systemd logcontrol interface"
readme = "../README.md"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
keywords = ["systemd", "log"]

homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
thiserror = "1.0.49"

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/swsnr/mdcat/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
