[package]
name = "logcontrol-tracing"
version = "0.2.2"
description = "Tracing backend for the log control interface"
documentation = "https://docs.rs/logcontrol-tracing"
readme = "README.md"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
keywords = ["systemd", "log", "tracing"]

homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
] }
tracing-journald = { version = "0.3.0", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
logcontrol = { version = "1.0.3", path = "../logcontrol" }

[dev-dependencies]
static_assertions = "1.1.0"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "ansi",
    "json",
] }
logcontrol-zbus = { path = "../zbus" }
zbus = "5.0.1"

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://codeberg.org/swsnr/logcontrol.rs/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
