[package]
name = "logcontrol-zbus"
description = "zbus-based DBus frontend for the logcontrol interface"
version = "0.1.0"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
logcontrol = { version = "1.0.0", path = "../logcontrol" }
zbus = { version = "3.14.1" }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
logcontrol-tracing = { path = "../tracing" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
