[package]
name = "logcontrol-zbus"
description = "zbus-based DBus frontend for the logcontrol interface"
version = "1.0.0"
documentation = "https://docs.rs/logcontrol-zbus"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
keywords = ["systemd", "log", "zbus", "dbus"]

homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
logcontrol = { version = "1.0.0", path = "../logcontrol" }
zbus = { version = "3.14.1" }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
logcontrol-tracing = { path = "../tracing" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/swsnr/logcontrol.rs/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
